<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_estoque"
        android:icon="@drawable/ic_nav_bag"
        android:title="@string/inventory" />
    <item
        android:id="@+id/nav_vendas"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/sales" />
    <item
        android:id="@+id/nav_clientes"
        android:icon="@drawable/ic_nav_people"
        android:title="@string/clients" />
    <item
        android:id="@+id/nav_config"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/settings" />
</menu>
